fix css on mobile, add weibo...

--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ p img {
     border: 1px solid #999;
     box-shadow: 1px 1px 2px #333;
     margin: 5px 0;
-    max-width: 500px;
+    max-width: 80%;
     display: block;
 }
 
